# ical-processor

./: .editorconfig  Pipfile  README.md  app.py  pyproject.toml  render.yaml
static/: app.js
templates/: app.js  index.html
